crates/cairn-test-fixtures/tests/snapshots/schema_fixtures__record_procedural_project_playbook.snap
---
source: crates/cairn-test-fixtures/tests/schema_fixtures.rs
expression: "&r"
---
{
  "id": "01HQZX9F5N0000000000000003",
  "target_id": "01HQZX9F5N0000000000000003",
  "kind": "playbook",
  "class": "procedural",
  "visibility": "project",
  "scope": {
    "entity": "cairn",
    "user": "hmn:tafeng"
  },
  "body": "Run cargo nextest before every push; fix all clippy warnings before opening a PR.",
  "provenance": {
    "source_sensor": "snr:local:hook:cc-session:v1",
    "created_at": "2026-04-26T00:00:00Z",
    "originating_agent_id": "hmn:tafeng",
    "source_hash": "sha256:cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc",
    "consent_ref": "consent:01HQZ",
    "llm_id_if_any": null
  },
  "updated_at": "2026-04-26T00:00:00Z",
  "evidence": {
    "recall_count": 0,
    "score": 0.0,
    "unique_queries": 0,
    "recency_half_life_days": 14
  },
  "salience": 0.5,
  "confidence": 0.7,
  "actor_chain": [
    {
      "role": "author",
      "identity": "hmn:tafeng",
      "at": "2026-04-26T00:00:00Z"
    }
  ],
  "signature": "ed25519:cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc"
}
