crates/cairn-test-fixtures/tests/snapshots/schema_fixtures__response_committed_search.snap
---
source: crates/cairn-test-fixtures/tests/schema_fixtures.rs
expression: "&r"
---
{
  "contract": "cairn.mcp.v1",
  "data": {
    "hits": [
      {
        "record_id": "01HQZX9F5N0000000000000000",
        "score": 0.92,
        "snippet": "user prefers dark mode and vim keybindings",
        "trust": "unverified"
      }
    ]
  },
  "operation_id": "01HQZX9F5N0000000000000006",
  "policy_trace": [
    {
      "gate": "consent.check",
      "result": "pass"
    }
  ],
  "status": "committed",
  "verb": "search"
}
