crates/cairn-test-fixtures/tests/snapshots/schema_fixtures__signed_intent_challenge.snap
---
source: crates/cairn-test-fixtures/tests/schema_fixtures.rs
expression: "&si"
---
{
  "chain_parents": [],
  "expires_at": "2026-04-26T01:00:00Z",
  "issued_at": "2026-04-26T00:00:00Z",
  "issuer": "agt:claude-code:sonnet-4-6:main:v1",
  "key_version": 1,
  "nonce": "BBBBBBBBBBBBBBBBBBBBBA==",
  "operation_id": "01HQZX9F5N0000000000000005",
  "scope": {
    "entity": "cairn",
    "tenant": "acme",
    "tier": "private",
    "workspace": "main"
  },
  "server_challenge": "CCCCCCCCCCCCCCCCCCCCCA==",
  "signature": "ed25519:bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
  "target_hash": "sha256:bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb"
}
